--- a/Week05_HW.ipynb
+++ b/Week05_HW.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fef5c2d0",
    "metadata": {},
    "outputs": [],
@@ -36,13 +36,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f5867d5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0. ,  2.5,  5. ,  7.5, 10. ])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr = np.linspace(0, 10, 5)\n",
-    "arr"
+    "arr\n",
+    "# np.linspace(0, 10, 5) will generate 0, 2.5, 5, 7.5, 10"
    ]
   },
   {
@@ -55,13 +67,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "887d3475",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0. , 2.5, 5. , 7.5])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr = np.arange(0, 10, 2.5)\n",
-    "arr"
+    "arr\n",
+    "#np.arrange(0, 10, 2.5) will generate 0, 2.5, 5, 7.5"
    ]
   },
   {
@@ -74,10 +98,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7794d4f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]],\n",
+       "\n",
+       "       [[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]],\n",
+       "\n",
+       "       [[1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.],\n",
+       "        [1., 1.]]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr = np.ones((3, 4, 2))\n",
     "arr"
@@ -93,10 +141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "96a9831c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "arr = np.eye(4)\n",
     "arr"
@@ -125,32 +187,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cb5f730e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3. , 3.5, 4. , 4.5, 5. , 5.5, 6. , 6.5, 7. , 7.5, 8. ])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1A"
+    "#1A\n",
+    "arr = np.linspace(3, 8, 11)\n",
+    "arr\n",
+    "\n",
+    "#linspace doesn't indicate step size, just number of points to generate\n",
+    "#10 elements fit between 3 and 8 with a step size of 0.5\n",
+    "#linspace includes endpoings, 3 and 8, so we need 11 points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "24b1c2e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3. , 3.5, 4. , 4.5, 5. , 5.5, 6. , 6.5, 7. , 7.5, 8. ])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1B"
+    "#1B\n",
+    "arr = np.arange(3, 8.5, 0.5)\n",
+    "arr\n",
+    "#np.arange doesn't including the endpoint of 8, so we need to go to 8.5 to include 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d86d54e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.]],\n",
+       "\n",
+       "       [[0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.],\n",
+       "        [0., 0., 0., 0., 0.]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#1C"
+    "#1C\n",
+    "zeros_array = np.zeros((3,4,5))\n",
+    "zeros_array"
    ]
   },
   {
@@ -167,10 +286,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ca8eae0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
@@ -190,10 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "94b41b29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = np.concatenate((a, b, c))\n",
     "d"
@@ -209,10 +350,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b874285b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 1, 2, 3, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.tile(a, 3)"
    ]
@@ -227,10 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "86c8715b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [1, 2, 3],\n",
+       "       [1, 2, 3]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.tile(a, (3,1))"
    ]
@@ -245,10 +410,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "72691e90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3, 1, 2, 3],\n",
+       "       [1, 2, 3, 1, 2, 3],\n",
+       "       [1, 2, 3, 1, 2, 3]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.tile(a, (3,2))"
    ]
@@ -281,22 +459,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "eca34fb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 3 2 1]\n",
+      " [1 2 3 3 2 1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#2A"
+    "#2A\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def mirror_stack(arr, N):\n",
+    "    mirrored = np.concatenate((arr, arr[::-1])) # Create the mirrored array\n",
+    "    stacked = np.vstack([mirrored] * N) # Stack it N times vertically\n",
+    "    return stacked\n",
+    "\n",
+    "# Example usage:\n",
+    "result = mirror_stack(np.array([1, 2, 3]), 2)\n",
+    "print(result)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a87deb91",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 2 2 2 3 3 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "#2B"
+    "#2B\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def repeat_elements(arr, N):\n",
+    "    repeated = np.repeat(arr, N) # Repeat each element N times\n",
+    "    return repeated # Return the new array\n",
+    "\n",
+    "# Example usage:\n",
+    "result = repeat_elements(np.array([1, 2, 3]), 3)\n",
+    "print(result)   "
    ]
   }
  ],
@@ -316,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
